# unstockfish

./: .gitignore  pyproject.toml  readme.md
src/unstockfish/: __init__.py  bench.py  cli.py  constants.py  engine.py  eval.py  gui.py  hashing.py  search.py  tt.py  uci.py
tests/: test_search.py
