[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unstockfish"
version = "0.1.0"
description = "A learning-focused Python chess engine."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["python-chess>=1.11.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
unstockfish-uci = "unstockfish.uci:main"
unstockfish-cli = "unstockfish.cli:main"
unstockfish-bench = "unstockfish.bench:main"
unstockfish-gui = "unstockfish.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
